--- a/theme/scss/site/layout.scss
+++ b/theme/scss/site/layout.scss
@@ -63,3 +63,8 @@ div.alignfull, div.alignwide {
 		right: 0 !important;
 	}
 }
+
+.is-content-justification-center {
+	margin-left: auto !important;
+  margin-right: auto !important;
+}
